# hratc2017_robot

./: CMakeLists.txt  README.md  package.xml
bags/: README.md
bags/aux_files/: bags.launch  bags.launch~  geoloc.py  triangulator.py
bags/rviz/: config.rviz
bags/trajectories/: coords.txt
description/urdf/: pioneer3at.urdf.xacro
hardware/: README.md
install/: comandos_trouble.py  trouble  trouble.rules  trouble.sh  trouble_Readme.txt
launch/: README.md  rosgraph.dot  run_robot.launch  trouble.launch  trouble_transforms.launch
maps/: README.md
maps/geoloc/: README.md  geoloc.py  temp_coords.txt  virtual_arena.py
maps/geoloc/virtual_arena/: README.md  virtual_arena.txt
model/gazebo/: Bridge.URDF  Bridge.urdf.xacro
model/gazebo/meshes/: Left_wall.STL
model/solidWorks/: Cavalete-Impressão.SLDASM  Suporte_Hokuyo.SLDASM
model/solidWorks/Suporte_Hokuyo/: Conjunto.SLDASM
src/config/: config.cpp
src/judge/: judge.cpp
src/minefieldViewer/: minefieldviewer.cpp
